WIP: color themes

--- a/packages/ui-toolkit/01-settings/settings-colors/index.scss
+++ b/packages/ui-toolkit/01-settings/settings-colors/index.scss
@@ -32,33 +32,31 @@ $palettes: (
     xdark:  hsl(15, 100%, 20%)   //#661A00
   ),
   blue: (
-    xlight: hsl(216, 100%, 83%), //#A6C9FF
-    light:  hsl(216, 100%, 67%), //#599CFF
-    base:   hsl(216, 60%, 50%),  //#3370CC
-    dark:   hsl(216, 60%, 37%),  //#265499
-    xdark:  hsl(216, 59%, 25%)   //#1A3866
-  ),
-  purple: (
-    xlight: hsl(257, 100%, 89%), //#D8C9FF
-    light:  hsl(256, 100%, 75%), //#A07DFF
-    base:   hsl(256, 55%, 56%),  //#7150CC
-    dark:   hsl(256, 44%, 42%),  //#553C99
-    xdark:  hsl(255, 44%, 28%)   //#382866
-  ),
-  green: (
-    xlight: hsl(151, 46%, 69%),  //#8AD4B0
-    light:  hsl(151, 42%, 53%),  //#54BA89
-    base:   hsl(151, 60%, 33%),  //#228756
-    dark:   hsl(151, 61%, 27%),  //#1B6E46
-    xdark:  hsl(151, 60%, 21%)   //#155436
+    light:  hsl(205, 100%, 92%), //#D6EEFF
+    base:   hsl(205, 100%, 40%), //#0077CC
+    dark:   hsl(205, 100%, 25%)  //#004A80
   ),
   gray: (
     xlight: hsl(240, 33%, 97%),  //#F5F5FA
-    light:  hsl(232, 29%, 95%),  //#EDEEF5
-    base:   hsl(234, 20%, 90%),  //#E1E2EB
-    dark:   hsl(235, 4%, 48%),   //#757680
-    xdark:  hsl(232, 5%, 29%),   //#45464D
-    xxdark: hsl(225, 8%, 9%)     //#16171A
+    light:  hsl(234, 20%, 90%),  //#E1E2EB
+    base:   hsl(235, 6%, 58%),   //#8D8E99
+    dark:   hsl(234, 5%, 38%),   //#5C5D66
+    xdark:  hsl(230, 6%, 19%)    //#2D2E33
+  ),
+  success: (
+    light:  hsl(123, 41%, 90%),  //#DBF0DC
+    base:   hsl(121, 41%, 35%),  //#357E36
+    dark:   hsl(120, 41%, 25%)   //#265A26
+  ),
+  warning: (
+    light:  hsl(3, 76%, 90%),    //#F9D4D2
+    base:   hsl(6, 76%, 40%),    //#B42818
+    dark:   hsl(6, 76%, 35%)     //#9D2315
+  ),
+  error: (
+    light:  hsl(51, 80%, 90%),   //#FAF4D1
+    base:   hsl(51, 80%, 55%),   //#E8CD30
+    dark:   hsl(51, 80%, 45%)    //#CFB317
   ),
   black: (
     base:   #16171A
