--- a/packages/ui-toolkit/02-tools/tools-spacing/index.scss
+++ b/packages/ui-toolkit/02-tools/tools-spacing/index.scss
@@ -36,7 +36,7 @@ $bolt-spacing-sizes: _bolt-create-spacing-map($bolt-spacing-values);
 // Convert shirt sizes in baseline-optimized sizes
 @function v-spacing($sizes, $modifier) {
   @if ($modifier == 'squish' or $modifier == 'squished') {
-    $modifier: $spacing-squished;
+    $modifier: $bolt-spacing-squished;
   } @elseif ($modifier == 'stretch' or $modifier == 'stretched') {
     $modifier: $stretched_RATIO;
   } @else {
