--- a/packages/ui-toolkit/04-elements/elements-headings/index.scss
+++ b/packages/ui-toolkit/04-elements/elements-headings/index.scss
@@ -8,6 +8,6 @@ h4,
 h5,
 h6 {
   @include font-family(heading);
-  @include font-size(base, tight);
+  @include font-size(large, tight);
   @include font-weight(bold);
 }
