--- a/packages/ui-toolkit/04-elements/elements-page/index.scss
+++ b/packages/ui-toolkit/04-elements/elements-page/index.scss
@@ -23,7 +23,7 @@ html {
 body {
   width: 100%;
   @include font-family(body);
-  @include font-size(base);
+  @include font-size(medium);
   // background-image: linear-gradient(to bottom,#0ff 0,rgba(255,255,255,0)1px);
   // background-repeat: repeat-y;
   // background-size: 100% 1rem;
