--- a/packages/ui-toolkit/bolt/bolt.scss
+++ b/packages/ui-toolkit/bolt/bolt.scss
@@ -36,7 +36,7 @@
 \* ------------------------------------ */
 @import '@bolt/components-all';
 @import '../06-components/components.headings.refactor';
-
+// @import '../06-components/components.article.refactor';
 
 /* ------------------------------------ *\
   Themes
