--- a/packages/ui-toolkit/01-settings/settings-colors/index.scss
+++ b/packages/ui-toolkit/01-settings/settings-colors/index.scss
@@ -2,53 +2,71 @@
    SETTINGS - COLORS
 \* ------------------------------------ */
 
-/* These HSL colors are fucked. */
+/* These are not up to date. */
 
 $palettes: (
   indigo: (
-    xlight: hsl(233, 20%, 100%), //#
-    light:  hsl(233, 60%, 50%),  //#
-    base:   hsl(233, 80%, 30%)   //#
+    xlight: hsl(233, 100%, 90%), //#CCD2FF
+    light:  hsl(233, 43%, 35%),  //#333C80
+    base:   hsl(233, 67%, 18%)   //#0F164D
   ),
   yellow: (
-    xlight: hsl(43, 20%, 100%),  //#
-    light:  hsl(43, 40%, 100%),  //#
-    base:   hsl(43, 70%, 100%),  //#
-    dark:   hsl(43, 90%, 90%),   //#
-    xdark:  hsl(43, 100%, 40%)   //#
+    xlight: hsl(44, 100%, 90%),  //#FFF1CC
+    light:  hsl(43, 100%, 80%),  //#FFE299
+    base:   hsl(43, 100%, 65%),  //#FFCC4C
+    dark:   hsl(43, 82%, 50%),   //#E6AB17
+    xdark:  hsl(43, 100%, 20%)   //#664900
   ),
   teal: (
-    xlight: hsl(180, 20%, 90%),  //#
-    light:  hsl(180, 40%, 80%),  //#
-    base:   hsl(180, 100%, 60%), //#
-    dark:   hsl(180, 90%, 40%),  //#
-    xdark:  hsl(180, 100%, 20%)  //#
+    xlight: hsl(180, 48%, 81%),  //#B8E6E6
+    light:  hsl(180, 45%, 64%),  //#7ACCCC
+    base:   hsl(180, 100%, 30%), //#009999
+    dark:   hsl(180, 82%, 22%),  //#0A6666
+    xdark:  hsl(180, 100%, 10%)  //#003333
   ),
   orange: (
-    xlight: hsl(15, 30%, 100%),  //#
-    light:  hsl(15, 60%, 100%),  //#
-    base:   hsl(15, 90%, 90%),   //#
-    dark:   hsl(15, 90%, 70%),   //#
-    xdark:  hsl(15, 100%, 40%)   //#
+    xlight: hsl(15, 100%, 85%),  //#FFC6B3
+    light:  hsl(15, 100%, 70%),  //#FF8C66
+    base:   hsl(15, 82%, 50%),   //#E64B17
+    dark:   hsl(15, 82%, 39%),   //#B33A12
+    xdark:  hsl(15, 100%, 20%)   //#661A00
   ),
   blue: (
-    xlight: hsl(201, 30%, 100%), //#
-    light:  hsl(201, 60%, 90%),  //#
-    base:   hsl(201, 100%, 70%), //#
-    dark:   hsl(201, 90%, 40%),  //#
-    xdark:  hsl(201, 100%, 20%)  //#
+    xlight: hsl(216, 100%, 83%), //#A6C9FF
+    light:  hsl(216, 100%, 67%), //#599CFF
+    base:   hsl(216, 60%, 50%),  //#3370CC
+    dark:   hsl(216, 60%, 37%),  //#265499
+    xdark:  hsl(216, 59%, 25%)   //#1A3866
+  ),
+  purple: (
+    xlight: hsl(257, 100%, 89%), //#D8C9FF
+    light:  hsl(256, 100%, 75%), //#A07DFF
+    base:   hsl(256, 55%, 56%),  //#7150CC
+    dark:   hsl(256, 44%, 42%),  //#553C99
+    xdark:  hsl(255, 44%, 28%)   //#382866
+  ),
+  green: (
+    xlight: hsl(151, 46%, 69%),  //#8AD4B0
+    light:  hsl(151, 42%, 53%),  //#54BA89
+    base:   hsl(151, 60%, 33%),  //#228756
+    dark:   hsl(151, 61%, 27%),  //#1B6E46
+    xdark:  hsl(151, 60%, 21%)   //#155436
   ),
   gray: (
-    xlight: hsl(233, 2%, 98%),   //#
-    light:  hsl(233, 4%, 92%),   //#
-    base:   hsl(233, 8%, 60%),   //#
-    dark:   hsl(233, 10%, 40%),  //#
-    xdark:  hsl(233, 12%, 20%)   //#
+    xlight: hsl(240, 33%, 97%),  //#F5F5FA
+    light:  hsl(232, 29%, 95%),  //#EDEEF5
+    base:   hsl(234, 20%, 90%),  //#E1E2EB
+    dark:   hsl(235, 4%, 48%),   //#757680
+    xdark:  hsl(232, 5%, 29%),   //#45464D
+    xxdark: hsl(225, 8%, 9%)     //#16171A
   ),
   black: (
     base:   #000
   ),
   white: (
     base:   #fff
+  ),
+  inherit: (
+    base:   inherit
   )
 );
