--- a/packages/ui-toolkit/06-components/_components.article.refactor.scss
+++ b/packages/ui-toolkit/06-components/_components.article.refactor.scss
@@ -1,5 +1,5 @@
 .c-article {
-  @include clearfix;
+  // @include clearfix;
 
   // line-height: $font-leading--base;
 
@@ -96,149 +96,150 @@
     letter-spacing: .1rem;
   }
 
-  // aside {
-  //   p,
-  //   hr,
-  //   figure,
-  //   blockquote,
-  //   ol, ul, dl,
-  //   details, summary {
-  //     &:first-child {
-  //       @include paragraph-spacing;
-  //     }
-  //   }
-  //
-  //   &:first-child {
-  //     p,
-  //     hr,
-  //     figure,
-  //     blockquote,
-  //     ol, ul, dl,
-  //     details, summary {
-  //       &:first-child {
-  //         margin-top: 0;
-  //       }
-  //     }
-  //   }
-  //
-  //   @include respond-to(medium) {
-  //     @include float(right);
-  //     // @include mm-margin(0,0,($font-leading--base + rem),($gutter + rem));
-  //     @include margin-bottom(medium);
-  //     @include margin-left(medium);
-  //
-  //     width: $golden-aside-width + vw;
-  //     max-width: $article-line-length/2 + ch;
-  //
-  //     &:first-child {
-  //       & + * {
-  //         margin-top: 0;
-  //       }
-  //     }
-  //   }
-  // }
+  aside {
+    p,
+    hr,
+    figure,
+    blockquote,
+    ol, ul, dl,
+    details, summary {
+      &:first-child {
+        // @include paragraph-spacing;
+      }
+    }
 
-  // h1, h2, h3, h4, h5, h6, header, hgroup {
-  //   & + * {
-  //     margin-top: 0;
-  //   }
-  //
-  //   & + aside {
-  //     p,
-  //     hr,
-  //     figure,
-  //     blockquote,
-  //     ol, ul, dl,
-  //     details, summary {
-  //       &:first-child {
-  //         margin-top: 0;
-  //       }
-  //     }
-  //   }
-  //
-  //   @include respond-to(medium) {
-  //     & + aside + * {
-  //       margin-top: 0;
-  //     }
-  //   }
-  // }
+    &:first-child {
+      p,
+      hr,
+      figure,
+      blockquote,
+      ol, ul, dl,
+      details, summary {
+        &:first-child {
+          margin-top: 0;
+        }
+      }
+    }
 
-  // ol, ul {
-  //   @include padding(0);
-  //   // @include mm-padding(0,0,0,0);
-  // }
+    @include respond-to(medium) {
+      float: right;
+      // @include mm-margin(0,0,($font-leading--base + rem),($gutter + rem));
+      @include margin-bottom(medium);
+      @include margin-left(medium);
 
-  // figure {
-  //   @include mm-padding(($font-leading--base/4 + rem),0,0,0);
-  //   @include text-align(center);
-  //   @include horizontal-scroll;
-  //
-  //   > div,
-  //   > img,
-  //   > a {
-  //     @include mm-margin(0,0,($font-leading--base/4 + rem),0);
-  //   }
-  //
-  //   > div,
-  //   > a, {
-  //     display: block;
-  //   }
-  //
-  //   > div {
-  //     @include position(relative,auto,auto,auto,auto);
-  //     @include mm-padding(30px,0,56.25%,0);
-  //
-  //     height: 0;
-  //     overflow: hidden;
-  //
-  //     iframe,object,embed {
-  //       @include position(absolute,0,auto,auto,0);
-  //
-  //       width: 100%;
-  //       height: 100%;
-  //     }
-  //   }
-  //
-  //   img {
-  //     max-width: 100%;
-  //   }
-  // }
+      // width: $golden-aside-width + vw;
+      // max-width: $article-line-length/2 + ch;
 
-  // figcaption {
-  //   @include font-size(xsmall);
-  // }
-  //
-  // blockquote {
-  //   @include mm-padding(($font-leading--base + rem),($gutter + rem),($font-leading--base + rem),($gutter + rem));
-  //   @include font-size(large);
-  //   @include border(left,($gutter/2 + rem) solid);
-  //
-  //   > *:first-child {
-  //     margin-top: 0;
-  //   }
-  // }
+      &:first-child {
+        & + * {
+          margin-top: 0;
+        }
+      }
+    }
+  }
 
-  // pre
-  // {
-  //   @include mm-padding(($font-leading--base + rem),($gutter + rem),($font-leading--base + rem),($gutter + rem));
-  //   @include null-spacing;
-  //   @include text-align(left);
-  //   @include horizontal-scroll;
-  //
-  //   code
-  //   {
-  //     @include font-size(xsmall);
-  //
-  //     display: block;
-  //     letter-spacing: .05rem;
-  //     white-space: inherit;
-  //   }
-  // }
-  //
-  // hr {
-  //   @include mm-padding(0,0,0,0);
-  //   @include border(top);
-  //
-  //   display: block;
-  // }
+  h1, h2, h3, h4, h5, h6, header, hgroup {
+    & + * {
+      margin-top: 0;
+    }
+
+    & + aside {
+      p,
+      hr,
+      figure,
+      blockquote,
+      ol, ul, dl,
+      details, summary {
+        &:first-child {
+          margin-top: 0;
+        }
+      }
+    }
+
+    @include respond-to(medium) {
+      & + aside + * {
+        margin-top: 0;
+      }
+    }
+  }
+
+  ol, ul {
+    @include padding(0);
+    // @include mm-padding(0,0,0,0);
+  }
+
+  figure {
+    text-align: center;
+    // @include mm-padding(($font-leading--base/4 + rem),0,0,0);
+    @include text-align(center);
+    @include horizontal-scroll;
+
+    > div,
+    > img,
+    > a {
+      @include mm-margin(0,0,($font-leading--base/4 + rem),0);
+    }
+
+    > div,
+    > a, {
+      display: block;
+    }
+
+    > div {
+      @include position(relative,auto,auto,auto,auto);
+      @include mm-padding(30px,0,56.25%,0);
+
+      height: 0;
+      overflow: hidden;
+
+      iframe,object,embed {
+        @include position(absolute,0,auto,auto,0);
+
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    img {
+      max-width: 100%;
+    }
+  }
+
+  figcaption {
+    @include font-size(xsmall);
+  }
+
+  blockquote {
+    @include mm-padding(($font-leading--base + rem),($gutter + rem),($font-leading--base + rem),($gutter + rem));
+    @include font-size(large);
+    @include border(left,($gutter/2 + rem) solid);
+
+    > *:first-child {
+      margin-top: 0;
+    }
+  }
+
+  pre
+  {
+    @include mm-padding(($font-leading--base + rem),($gutter + rem),($font-leading--base + rem),($gutter + rem));
+    @include null-spacing;
+    @include text-align(left);
+    @include horizontal-scroll;
+
+    code
+    {
+      @include font-size(xsmall);
+
+      display: block;
+      letter-spacing: .05rem;
+      white-space: inherit;
+    }
+  }
+
+  hr {
+    @include mm-padding(0,0,0,0);
+    @include border(top);
+
+    display: block;
+  }
 }
