feat: adding webpack js build, static font assets, and async font loader module

--- a/packages/bolt-core/02-tools/tools-all.scss
+++ b/packages/bolt-core/02-tools/tools-all.scss
@@ -4,3 +4,5 @@
 @import '@bolt/tools-sassy-maps';
 @import '@bolt/tools-font-kerning';
 @import '@bolt/tools-strip-unit';
+
+@import '_tools.font-face';
