--- a/sandbox/styleguide/source/_layouts/default.html
+++ b/sandbox/styleguide/source/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}" class="js-fonts-loaded">
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
   {% include head.html %}
 
