--- a/packages/bolt-core/04-elements/elements-page/index.scss
+++ b/packages/bolt-core/04-elements/elements-page/index.scss
@@ -22,6 +22,7 @@ html {
 
 body {
   @include font-family(body);
+  @include font-family(bodySubset);
   @include font-size(base);
 
   // margin: 0;
