--- a/packages/bolt-core/01-settings/settings-breakpoints/index.scss
+++ b/packages/bolt-core/01-settings/settings-breakpoints/index.scss
@@ -1,17 +1,29 @@
-/* ------------------------------------ *\
-  SETTINGS - BREAKPOINTS
-\* ------------------------------------ */
+////
+/// @group Settings:Breakpoints
+/// @author Salem Ghoweri
+/// @link https://github.com/at-import/breakpoint Breakpoint Sass
+/// @link https://github.com/lolmaus/breakpoint-slicer Breakpoint Slicer
+/// @todo Replace the Breakpoint Sass and Breakpoint Slicer libraries with a more flexible alternative such as [Mappy Breakpoints](https://github.com/zellwk/mappy-breakpoints). This isn't expected to any breaking changes to the existing API.
+////
+
+
 @import 'breakpoint-sass';
 @import 'breakpoint-slicer/stylesheets/breakpoint-slicer';
 
 
-$breakpoints: (
+/// Major breakpoints used globally in Bolt. Uses breakpoint-sass and breakpoint-slicer to handle some of the heavier lifting.
+/// @name breakpoints
+/// @type Map
+$bolt-breakpoints: (
   xsmall:  400px,
   small:   600px,
   medium:  800px,
-  large:   1200px,
-  xlarge:  1400px
+  large:   1000px,
+  xlarge:  1200px
 );
+
+// Re-map Bolt's namespaced Sassmap to the Breakpoint Sass's `$breakpoints` default
+$bolt-breakpoints: $breakpoints;
 
 @each $breakpoint in $breakpoints {
   $name:     nth($breakpoint, 1);
