--- a/packages/bolt-core/01-settings/settings-breakpoints/index.scss
+++ b/packages/bolt-core/01-settings/settings-breakpoints/index.scss
@@ -12,7 +12,6 @@
 
 
 /// Major breakpoints used globally in Bolt. Uses breakpoint-sass and breakpoint-slicer to handle some of the heavier lifting.
-/// @name breakpoints
 /// @type Map
 $bolt-breakpoints: (
   xsmall:  400px,
@@ -23,7 +22,7 @@ $bolt-breakpoints: (
 );
 
 // Re-map Bolt's namespaced Sassmap to the Breakpoint Sass's `$breakpoints` default
-$bolt-breakpoints: $breakpoints;
+$breakpoints: $bolt-breakpoints;
 
 @each $breakpoint in $breakpoints {
   $name:     nth($breakpoint, 1);
@@ -33,3 +32,14 @@ $bolt-breakpoints: $breakpoints;
   $slicer-breakpoint-names: append($slicer-breakpoint-names, $name);
   $slicer-breakpoints:      append($slicer-breakpoints, $value);
 }
+
+
+/// @example
+///   For example, do this at medium sized screens or larger
+///
+///   .c-card {
+///      @include respond-to(medium){
+///         flex-direction: column; /* [1] */
+///      }
+///   }
+///
